[fix] hide unnecessary scrollbar by setting margin 0 of `ajax-box`

--- a/app/assets/stylesheets/cms/preview/ajax_in_iframe.scss
+++ b/app/assets/stylesheets/cms/preview/ajax_in_iframe.scss
@@ -1,5 +1,6 @@
 #ajax-box.ss-ajax-in-iframe-content {
   height: 100%;
+  margin: 0;
   padding: 10px;
 
   #item-form {
@@ -7,14 +8,17 @@
   }
 
   .column-value {
-    // 60px: footer height
-    //height: calc(100% - 60px);
     .inplace-checkers {
       margin-top: 5px;
       #errorSyntaxChecker {
         margin-top: 5px;
       }
     }
+
+    //&.column-value-cms-column-textarea {
+    //  // 60px: footer height
+    //  height: calc(100% - 60px);
+    //}
   }
 
   .column-value-body {
